deploy/kubernetes/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  labels:
    app: mssql
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
  selector:
    app: mssql
