deploy/kubernetes/urlshortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener-service
  labels:
    app: urlshortener
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: urlshortener
