deploy/kubernetes/urlshortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: urlshortener.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: urlshortener-service
            port:
              number: 80
